# future-commodity-returns

./: .gitignore  .pre-commit-config.yaml  README.md  mise.toml  pyproject.toml
scripts/: create_swap.sh  scrape_competition.sh  setup_mise.sh
src/: inference.py  plot.py  settings.py  train.py
src/kaggle_utils/: check.py  download.py  upload.py  write.py
src/kaggle_utils/utils/: customhub.py  utils.py
src/models/itransformer/layers/: embed.py  self_attention_family.py  transformer_enc_dec.py
src/models/itransformer/model/: itransformer.py
src/utils/: seed.py
