[project]
name = "mitsui-commodity-pred"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "grpcio>=1.76.0",
    "joblib>=1.5.3",
    "kaggle>=1.8.3",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "protobuf>=6.33.2",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "rootutils>=1.0.7",
    "schedulefree>=1.4.1",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "timm>=1.0.22",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tyro>=1.0.3",
    "wheel>=0.45.1",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
